# Unknown

./: build.bat  build.sh  clean.sh  todo.txt  zip.bat  zip.sh
old/: unknown_place_armies.cpp
src/: CMakeLists.txt  army_movement.cpp  army_movement.hpp  army_movements.cpp  army_movements.hpp  army_placements.cpp  army_placements.hpp  bot.cpp  bot.hpp  debug.cpp  debug.hpp  fsa.h  game.cpp  game.hpp  game_history.cpp  game_history.hpp  game_predictor.cpp  game_predictor.hpp  game_state.hpp  interpreter.cpp  interpreter.hpp  main.cpp  map.cpp  map.hpp  neutral.cpp  neutral.hpp  opponent.cpp  opponent.hpp  region.cpp  region.hpp  rules.cpp  rules.hpp  stl_if.hpp  stl_sort.hpp  super_region.cpp  super_region.hpp  timer.cpp  timer.hpp  unknown.cpp  unknown.hpp
testmaps/: enemy_placement.txt  landmass.txt  real.txt  start.txt  super_region.txt  testmap.txt  to_super_region.txt  to_super_region2.txt
